--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-16-clash-node-daily-updates.htm" title="11月16日→21.4M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月16日→21.4M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-35378.htm" title="动物医院开设条件是什么样的呢（开动物医院需要多少资金）">动物医院开设条件是什么样的呢（开动物医院需要多少资金）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-2-free-v2ray.htm" title="11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-25-free-node-subscribe.htm" title="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-35856.htm" title="宠物美容师很辛苦吗（宠物美容师值得坚持吗）">宠物美容师很辛苦吗（宠物美容师值得坚持吗）</a></li>
-                        <li class="py-2"><a href="/news/article-25483.htm" title="免费领养宠物正规网站推荐（免费领养宠物正规网站推荐下载）">免费领养宠物正规网站推荐（免费领养宠物正规网站推荐下载）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-11-clash-node.htm" title="12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-7-node-share.htm" title="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-29-free-node-subscribe.htm" title="11月29日→20.5M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月29日→20.5M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-24468.htm" title="SpringBoot实战实现WEB的常用功能">SpringBoot实战实现WEB的常用功能</a></li>
+                        <li class="py-2"><a href="/news/article-23172.htm" title="开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）">开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）</a></li>
+                        <li class="py-2"><a href="/news/article-38296.htm" title="宠物疫苗不冷藏多久失效（宠物疫苗不冷藏可以放多久）">宠物疫苗不冷藏多久失效（宠物疫苗不冷藏可以放多久）</a></li>
+                        <li class="py-2"><a href="/news/article-27348.htm" title="加盟狗粮加工厂多少钱合适（狗粮加工厂加盟销售）">加盟狗粮加工厂多少钱合适（狗粮加工厂加盟销售）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-15-free-node-subscribe-links.htm" title="12月15日→19.7M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月15日→19.7M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-12-free-ssr-subscribe.htm" title="1月12日→19.7M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">1月12日→19.7M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-34437.htm" title="动物防疫疫苗种类有哪些品种名称（动物疫苗的作用）">动物防疫疫苗种类有哪些品种名称（动物疫苗的作用）</a></li>
+                        <li class="py-2"><a href="/news/article-27347.htm" title="58同城免费领养小猫宜春（58同城宠物猫领养）">58同城免费领养小猫宜春（58同城宠物猫领养）</a></li>
+                        <li class="py-2"><a href="/news/article-19058.htm" title="猫粮十大品牌（猫粮十大品牌排）">猫粮十大品牌（猫粮十大品牌排）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→18.5M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">12月27日→18.5M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
