--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-11-06">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-6-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/3465a82f9e0ee6212c3628015c6386cf.webp" alt="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-6-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、美国、香港、日本、韩国、加拿大、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-11-05">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-5-free-clash.htm" class="xcblog-blog-url">
@@ -221,22 +235,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-27">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/d3c24bb20e9a1c8c2d93a6bf044ee5c4.webp" alt="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、韩国、加拿大、美国、香港、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-39284.htm" title="哈尔滨王允海动物医院怎么样呀（哈尔滨王允海动物医院怎么样呀知乎）">哈尔滨王允海动物医院怎么样呀（哈尔滨王允海动物医院怎么样呀知乎）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-7-node-share.htm" title="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30074.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-18-free-subscribe-node.htm" title="11月18日→19.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月18日→19.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-28736.htm" title="兽医职业资格证书网上查询（兽医执业证官网）">兽医职业资格证书网上查询（兽医执业证官网）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-14-free-ssr-node.htm" title="12月14日→23M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">12月14日→23M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-9-clash-node-daily-updates.htm" title="1月9日→18.1M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">1月9日→18.1M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-12-free-ssr-subscribe.htm" title="1月12日→19.7M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">1月12日→19.7M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-20430.htm" title="宠物粮食加工厂加盟条件要求标准 宠物粮食加工厂加盟条件要求标准是什么">宠物粮食加工厂加盟条件要求标准 宠物粮食加工厂加盟条件要求标准是什么</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-22-free-ssr-subscribe.htm" title="12月22日→18.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月22日→18.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-25021.htm" title="宠物领养协议书模板下载手机版 宠物领养协议书模板下载手机版">宠物领养协议书模板下载手机版 宠物领养协议书模板下载手机版</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" title="12月28日→22.2M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">12月28日→22.2M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-7-clash-node-daily-updates.htm" title="12月7日→22.9M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">12月7日→22.9M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-20880.htm" title="开宠物店需要干什么（开宠物店需要准备什么?）">开宠物店需要干什么（开宠物店需要准备什么?）</a></li>
+                        <li class="py-2"><a href="/news/article-40281.htm" title="兽用疫苗保质期多久啊（兽用疫苗厂）">兽用疫苗保质期多久啊（兽用疫苗厂）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-ssr-node.htm" title="11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月8日→18.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-33488.htm" title="k8s 部署pod到指定node">k8s 部署pod到指定node</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-29-shadowrocket-node.htm" title="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
